syntax = "proto3";
package laqista;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

/*
 * Core messages
 */

message Server {
  string id = 1;
  string addr = 2;
}
enum ServerState {
  STARTING = 0;
  RUNNING = 1;
  FAILED = 2;
  AUTHORITATIVE = 3;
  UNINITIALIZED = 4;
}

message Deployment {
  string id = 1;
  string source = 2;
  string name = 3;
  map<string, float> accuracies_percent = 4;
}

message Group {
  uint32 number = 1;
  Server scheduler = 2;
}

message QoS {
  uint32 latency_ms = 1;
  float accuracy_percent = 2;
  Locality locality = 3;
}

message Locality {
  oneof specification {
    string id = 1;
    string host = 2;
    string pubkey = 3;
  }
}

/*
 * Scheduler services
 */

service Scheduler {
  // For cluster management.
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Report(ReportRequest) returns (ReportResponse);
  rpc Connect(ConnectRequest) returns (ConnectResponse);

  // For managing and calling applictions.
  rpc Deploy(DeployRequest) returns (DeployResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
  rpc GetApps(GetAppsRequest) returns (GetAppsResponse);
}

message NotifyRequest { ClusterState cluster = 1; }
message NotifyResponse { bool success = 1; }

message ReportRequest {
  Server server = 1;
  repeated MonitorWindow windows = 2;
}
message ReportResponse {
  bool success = 1;
  ClusterState cluster = 2;
}

message ClusterState {
  Group group = 1;
  repeated Server servers = 2;
  repeated AppInstanceLocations instances = 3;
}
message AppInstanceLocations {
  Deployment deployment = 1;
  repeated Server locations = 2;
}

message JoinRequest { Server server = 1; }
message JoinResponse {
  bool success = 1;
  Group group = 2;
}
message Nomination { ClusterState cluster = 1; }

message GetAppsRequest { repeated string names = 1; }
message GetAppsResponse { repeated Deployment apps = 1; }

message LookupRequest {
  string deployment_id = 1;
  QoS qos = 2;
}
message LookupResponse {
  bool success = 1;
  string deployment_id = 2;
  Server server = 3;
}

message DeployRequest {
  string source = 1;
  string name = 3;
}
message DeployResponse {
  bool success = 1;
  Deployment deployment = 2;
}

/*
 * Server Daemon services
 */

service ServerDaemon {
  // For getting cluster information.
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

  // For monitoring.
  rpc Ping(google.protobuf.Empty) returns (PingResponse);
  rpc Monitor(MonitorRequest) returns (MonitorResponse);

  // App Instance management.
  rpc Spawn(SpawnRequest) returns (SpawnResponse);
  rpc Destroy(DestroyRequest) returns (DestroyResponse);

  rpc Nominate(NominateRequest) returns (NominateResponse);

  // In addition, the Server Daemon proxies any requsets that is not to package
  // "laqista".
}

message GetInfoRequest {}
message GetInfoResponse {
  Server server = 1;
  optional Group group = 2;
  ServerState state = 3;
}

message PingResponse { bool success = 1; }

message MonitorRequest { TimeWindow window = 1; }
message MonitorResponse { repeated MonitorWindow windows = 1; }

message TimeWindow {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}
message MonitorWindow {
  TimeWindow window = 1;
  ResourceUtilization utilization = 2;
}
message ResourceUtilization {
  int32 cpu = 1;
  int32 ram_total = 2;
  int32 ram_used = 3;
  int32 gpu = 4;
  int32 vram_total = 5;
  int32 vram_used = 6;
}

message SpawnRequest { Deployment deployment = 1; }
message SpawnResponse {
  bool success = 1;
  Deployment deployment = 2;
  Server server = 3;
}

message DestroyRequest {
  string app_id = 1;
  DestroyReason reason = 2;
}
message DestroyResponse { bool success = 1; }

enum DestroyReason {
  DESTROY_REASON_UNKNOWN = 0;
  SCALE_IN = 1;
  REMOVED = 2;
}

message NominateRequest { Nomination nomination = 1; }
message NominateResponse { bool success = 1; }